--- a/options.html
+++ b/options.html
@@ -28,6 +28,23 @@
 		<input id='save' type='button' value='Save'>
 		<div id='status'></div>
 	</div>
+	
+	Favorite color:
+<select id="color">
+ <option value="red">red</option>
+ <option value="green">green</option>
+ <option value="blue">blue</option>
+ <option value="yellow">yellow</option>
+</select>
+
+<label>
+  <input type="checkbox" id="like">
+  I like colors.
+</label>
+
+<div id="status"></div>
+<button id="save">Save</button>
+
 </div>
 
 <style>
