Initial commit of this actual extension

--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,6 @@
 <div id='Outer'>
-	<h3>#Paultrics Ticket Thief</h3>
-	<p>This extension only runs when you have clicked the link below. It will continue running until you have 2 or more tickets open and assigned to you.</p>
-	<a href='http://odo.corp.qualtrics.com/?a=QUni&b=SupportCombinedInbox&TakeTickets=1' target='_blank'>Fire it up!</a>
+	<h3>Insights on FIRE</h3>
+	<p>Do all the things you need in the easiest way possible</p>
 	<a id='options' href='options.html' target='_blank'>Configure</a>
 </div>
 <script>
